<resources>
    <string name="app_name">Tech Center</string>
    <string name="menu">Catalog</string>
    <string name="contact">Contact</string>
    <string name="filter">Filter</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="loading">Loading...</string>
    <string name="search_history">Search History</string>
    <string name="no_results_found">No Results Found</string>
    <string name="type_here">Search here...</string>
    <string name="price">Price $</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetariano</string>
    <string name="lactose_free">Sem lactose</string>
    <string name="gluten_free">Sem glúten</string>
    <string name="sugar_free">Sem Açúcar</string>
    <string name="low_carb">Low Carb</string>
    <string name="spicy">Picante</string>
    <string name="sale">On Sale</string>
    <string name="new_item">New</string>
    <string name="popular">Popular</string>
    <string name="category">Category</string>
    <string name="ready">Ready</string>
    <string name="reset_all">Reset All</string>
    <string name="any_comment">Have a comment?</string>
    <string name="similar_items">Similar Products</string>
    <string name="share_via">Share via</string>
    <string name="show">Show</string>
    <string name="item">Product</string>
    <string name="items">Products</string>
    <string name="ellipsis">…</string>
    <string name="add">Add</string>
    <string name="item_added">Item Added</string>
    <string name="submit_order">Submit Order</string>
    <string name="on_request">On Request</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="delivery_fee">Delivery Charge</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="closed_warning">Nossas entregas são de segunda a sábado, mas neste momento não esta ativa. O horário da entrega será combinado com você pelo whatsapp, para esclarecer dúvidas e confirmar os seus dados.</string>


    <string name="whatsapp_not_installed_error">WhatsApp Not Installed</string>
    <string name="item_not_found_error">Product Not Fount.</string>
    <string name="no_internet_connection_error">No Internet Connection.</string>
    <string name="name">Name</string>
    <string name="name_required">Name*</string>
    <string name="phone_number_required">Phone number*</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address_optional">Email (Optional)</string>
    <string name="email_address">Email</string>
    <string name="email_address_required">Email*</string>
    <string name="email_input_help">-</string>
    <string name="delivery">Delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="select_area_required">Delivery Area*</string>
    <string name="select_area">Delivery Area</string>
    <string name="street_required">Rua*</string>
    <string name="number_required">Número*</string>
    <string name="complement_required">Complemento*</string>
    <string name="neighborhood_required">Bairro*</string>
    <string name="comment_about_the_order">Comment about the order</string>
    <string name="payment_method">Payment Method*</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_coupon">Coupon Invalid</string>
    <string name="added_to_cart">Added To Cart</string>
    <string name="close">Close</string>
    <string name="discount">Discount</string>
    <string name="error">Error</string>
    <string name="success_order_title">Order Has Been Submitted Successfully</string>
    <string name="success_order_message">Thank you for choosing us!</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_phone_required">Phone number is required</string>
    <string name="error_street_required">O campo Rua é obrigatório</string>
    <string name="error_address_required">Address is required</string>
    <string name="error_street_number_required">O campo Número é obrigatório</string>
    <string name="error_complement_required">O campo Complemento é obrigatório</string>
    <string name="error_neighborhood_required">O campo Bairro é obrigatório</string>
    <string name="cart_empty">Cart Is Empty</string>
    <string name="invalid_email">Email Invalid</string>
    <string name="error_area">Please, select delivery area</string>
    <string name="error_payment_method">Please, select payment method</string>
    <string name="error_comment">Comment should not be more than 155 characters</string>
    <string name="error_order">Error submitting your order. Please, try again later.</string>
    <string name="app_version">V %1$s</string>
    <string name="address">Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>